--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -12,7 +13,6 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-<<<<<<< HEAD
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
@@ -34,6 +34,23 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
+          <li>Cascading Style Sheets (CSS) is used to add style to a webpage, it is a programming language used by developers to define how webpage content is presented to users.</li>
+          <li>There are three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS style sheet.</li>
+          <li>The most common way to style a webpage is by using an external CSS style sheet. This is preferred in most cases because it allows developers to keep all their CSS rules in a separate file, which makes design changes easier (Separation of concerns).</li>
+          <li>A selector defines the element or attributes to which the rules, or declarations, will apply.</li>
+          <li>Declarations contain two important components: the CSS property we want to apply and the value of the property.</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>Every HTML element is essentially a box (CSS box model).</li>
+          <li>To apply a rule to all the elements visible on the page we use a special wild card symbol, or *.</li>
+          <li>We combined two selectors into a single CSS rule with a comma, allowing the declarations to affect both selectors.</li>
+          <li>Do Not Repeat Yourself (DRY) is a coding principle that encourages developers to reuse or share pieces of code in order to reduce the number of lines of code that need to be written or maintained.</li>
+          <li>text-align is used as one way to center a title or heading on a webpage.</li>
+          <li>The IMG selector assigns property values to any image element in the markup.</li>
+          <li>To link an external CSS style sheet to an HTML file, you need to add the link to the style sheet in the HEAD section of the HTML file.</li>
+          <li>A LINK element creates the connection to the external file. The rel attribute specifies the relationship between the current document and the linked document resource. The href attribute specifies the location (URL) of the external resource.</li>
+          <li>Class attributes allow us to share a CSS rule to any element we choose by assigning the rule to a class attribute with a class selector.</li>
+          <li>The class attribute can be assigned to the element in the HTML, enabling us to freely choose which elements will be assigned the CSS rule.</li>
           <li>Enter your CSS notes here</li>
         </ul>
       </section>
@@ -51,9 +68,6 @@
           <li>Enter your JavaScript notes here</li>
         </ul>
       </section>
-=======
-      <!-- Student code goes here -->
->>>>>>> f9bd4bd43030ddc6ff344f4f951eb6e7aecff622
     </main>
 
     <footer>
