added functions to the JS code

--- a/index.html
+++ b/index.html
@@ -19,40 +19,39 @@
         <ul>
           <li>Hypertext Markup Language (HTML) is one of the three cornerstone languages used in web development: HTML, CSS, and JS.</li>
           <li>HTML is used to create the structure of a webpage. </li>
-          <li>HTML is made up of ELEMENTS and an element is a type of content on a webpage. </li>
+          <li>HTML is made up of <strong>elements</strong> and an element is a type of content on a webpage. </li>
           <li>HTML elements work together to build the structure of a webpage and provide a framework that makes it easy for a user to navigate the webpage.</li>
-          <li>Two elements are especially important to understanding how the structure works: the HEAD and the BODY.</li>
-          <li>The HEAD element contains information, or metadata, that helps the browser to render the page correctly. Metadata is data about our webpage that the browser uses to effectively serve our webpage to users. Elements included within the HEAD are not visible when a user looks at a webpage.</li>
-          <li>The BODY element defines the body of the document, which contains the content that is visible to the user. All the elements that we want the user to see and interact with must be placed inside this element.</li>
-          <li>The BODY element is an example of a semantic HTML element. It is important to use semantic HTML elements, because they make your HTML easier to read by other developers and the browser and more accessible to a variety of users (assistive technologies).</li>
-          <li>An HTML ATTRIBUTE defines additional information about an element.</li>
-          <li>An element refers to the entire element from opening tag to closing tag, whereas a TAG refers only to what appears inside the angle brackets.</li>
-          <li>Elements that are nested inside other elements are called CHILD ELEMENTS. The element that holds all the children is known as the PARENT ELEMENT.</li>
-          <li>The ALT TEXT is important for screen readers and other assistive technologies. Alt text can also improve search engine rankings for your website.</li>
-          <li>SECTION elements are semantic elements that define a section in a document that contains thematic content.</li>
+          <li>Two elements are especially important to understanding how the structure works: the <strong>head</strong> and the <strong>body</strong>.</li>
+          <li>The <strong>head</strong> element contains information, or metadata, that helps the browser to render the page correctly. <strong>Metadata</strong> is data about our webpage that the browser uses to effectively serve our webpage to users. Elements included within the head are not visible when a user looks at a webpage.</li>
+          <li>The <strong>body</strong> element defines the body of the document, which contains the content that is visible to the user. All the elements that we want the user to see and interact with must be placed inside this element.</li>
+          <li>The body element is an example of a <strong>semantic HTML element</strong>. It is important to use semantic HTML elements, because they make your HTML easier to read by other developers and the browser and more accessible to a variety of users (assistive technologies).</li>
+          <li>An HTML <strong>attribute</strong> defines additional information about an element.</li>
+          <li>An <strong>element</strong> refers to the entire element from opening tag to closing tag, whereas a <strong>tag</strong> refers only to what appears inside the angle brackets.</li>
+          <li>Elements that are nested inside other elements are called <strong>child elements</strong>. The element that holds all the children is known as the <strong>parent element</strong>.</li>
+          <li>The <strong>Alt text</strong> is important for screen readers and other assistive technologies. Alt text can also improve search engine rankings for your website.</li>
+          <li><strong>Section elements</strong> are semantic elements that define a section in a document that contains thematic content.</li>
         </ul>
       </section>
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
           <li>Cascading Style Sheets (CSS) is used to add style to a webpage, it is a programming language used by developers to define how webpage content is presented to users.</li>
-          <li>There are three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS style sheet.</li>
-          <li>The most common way to style a webpage is by using an external CSS style sheet. This is preferred in most cases because it allows developers to keep all their CSS rules in a separate file, which makes design changes easier (Separation of concerns).</li>
-          <li>A selector defines the element or attributes to which the rules, or declarations, will apply.</li>
-          <li>Declarations contain two important components: the CSS property we want to apply and the value of the property.</li>
-          <li>A margin indicates how much space we want around the outside of an element.</li>
-          <li>A padding indicates how much space we want around the content inside an element.</li>
-          <li>Every HTML element is essentially a box (CSS box model).</li>
+          <li>There are three ways to style a webpage using CSS: <strong>inline CSS</strong>, <strong>internal CSS style sheet</strong>, and <strong>external CSS style sheet</strong>.</li>
+          <li>The most common way to style a webpage is by using an external CSS style sheet. This is preferred in most cases because it allows developers to keep all their CSS rules in a separate file, which makes design changes easier (<strong>Separation of concerns</strong>).</li>
+          <li>A <strong>selector</strong> defines the element or attributes to which the rules, or declarations, will apply.</li>
+          <li><strong>Declarations</strong> contain two important components: the CSS property we want to apply and the value of the property.</li>
+          <li>A <strong>margin</strong> indicates how much space we want around the outside of an element.</li>
+          <li>A <strong>padding</strong> indicates how much space we want around the content inside an element.</li>
+          <li>Every HTML element is essentially a box (<strong>CSS box model</strong>).</li>
           <li>To apply a rule to all the elements visible on the page we use a special wild card symbol, or *.</li>
           <li>We combined two selectors into a single CSS rule with a comma, allowing the declarations to affect both selectors.</li>
-          <li>Do Not Repeat Yourself (DRY) is a coding principle that encourages developers to reuse or share pieces of code in order to reduce the number of lines of code that need to be written or maintained.</li>
-          <li>text-align is used as one way to center a title or heading on a webpage.</li>
-          <li>The IMG selector assigns property values to any image element in the markup.</li>
-          <li>To link an external CSS style sheet to an HTML file, you need to add the link to the style sheet in the HEAD section of the HTML file.</li>
-          <li>A LINK element creates the connection to the external file. The rel attribute specifies the relationship between the current document and the linked document resource. The href attribute specifies the location (URL) of the external resource.</li>
-          <li>Class attributes allow us to share a CSS rule to any element we choose by assigning the rule to a class attribute with a class selector.</li>
+          <li><strong>Do Not Repeat Yourself </strong> (DRY) is a coding principle that encourages developers to reuse or share pieces of code in order to reduce the number of lines of code that need to be written or maintained.</li>
+          <li><strong>text-align</strong> is used as one way to center a title or heading on a webpage.</li>
+          <li>The <strong>img selector</strong> assigns property values to any image element in the markup.</li>
+          <li>To link an external CSS style sheet to an HTML file, you need to add the link to the style sheet in the head section of the HTML file.</li>
+          <li>A <strong>link element</strong> creates the connection to the external file. The rel attribute specifies the relationship between the current document and the linked document resource. The href attribute specifies the location (URL) of the external resource.</li>
+          <li><strong>Class attributes</strong> allow us to share a CSS rule to any element we choose by assigning the rule to a class attribute with a class selector.</li>
           <li>The class attribute can be assigned to the element in the HTML, enabling us to freely choose which elements will be assigned the CSS rule.</li>
-          <li>Enter your CSS notes here</li>
         </ul>
       </section>
       <section class="card" id="git-section">
@@ -60,13 +59,35 @@
         <ul>
           <li>git status: checks what branch we are currently on.</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
-          <li>Enter your Git notes here</li>
+          <li>git add -A: stages the new modification in the branch we are working in.</li>
+          <li>git checkout branch-name: changes the branch we are working on.</li>
+          <li>git commit -m “your message here”: commits the changes locally.</li>
+          <li>git pull origin main: checks if our local branch is up to date with the main branch in our remote repository, before pushing up our changes.</li>
+          <li>git push origin branch-name: pushes up the changes to the remote repository.</li>
         </ul>
       </section>
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>JavaScript (JS) is a high-level dynamic programming language that allows users to interact with websites. Using JavaScript, you can power your websites with effects, interactivity, data communication, and much more.</li>
+          <li><strong>Variables</strong> are containers that store values, to declare a variable, we use the <strong>var</strong> keyword.</li>
+          <li>To link an JS file to an HTML file, you need to add the link to JS file in the body section of the HTML file.</li>
+          <li>Developers use the <strong>console.log method</strong> daily to debug and test the code that they write.</li>
+          <li>Keyboard commands to open the console: Command+Option+I on macOS, Control+Shift+I on Windows.</li>
+          <li><strong>Control flow</strong> is the order in which a computer executes code in a script. In JS, code runs from the first statement at the top of the page, down to the last statement at the bottom of the page.</li>
+          <li><strong>Conditional statements</strong> and <strong>loops</strong> are used to control the order in which code is executed, or if it is even executed at all.</li>
+          <li>If we use the <strong>if statement</strong>, code will only execute if the statement meets a condition, or is true. If it is true, then the computer will do whatever action we ask it to do in between the curly brackets. If the condition is not true or has a value that is not truthy, then the computer will ignore whatever is in between the curly brackets and move on.</li>
+          <li>An <strong>array</strong> is a single variable that is used to hold a group of data. Arrays are typically used to hold data that is related in some way. Arrays are especially useful when we want to perform a task on multiple pieces of data at once.</li>
+          <li>A single array can store different types of data, such as strings, numbers, and so on.</li>
+          <li>The <strong>index</strong> is a unique number, which identifies the location of the data item in the array. It is used to access individual data inside the array.</li>
+          <li>Arrays are zero-indexed and sequential. This means that the first item in any array has an index of 0, not 1. They are also whole numbers that increase by 1 each time.</li>
+          <li>A <strong>for loop</strong> uses the predictable pattern of indices to perform a task on all the items in an array by allowing a single code block to be executed over and over.</li>
+          <li><strong>Commenting out</strong> code makes a part of the code inactive without deleting it, just in case you need it later. To comment out put /* before and */ after the block of code.</li>
+          <li>A <strong>function</strong> is a set of instructions that tells the computer how to perform a certain task.</li>
+          <li>You <strong>must call a function</strong> by name in order to execute it. </li>
+          <li>To create a function, we use the <strong>function keyword</strong>. Then we give our function a <strong>unique name</strong>. We will use this unique name whenever we call the function.</li>
+          <li>A function's name is followed by <strong>parentheses ()</strong>.</li>
+          <li><strong>Math.floor()</strong> and <strong>Math.random()</strong> are both properties of JavaScript's built-in Math object that can be used together to generate a random number.</li>
         </ul>
       </section>
     </main>
